# identity

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.dev.yaml  compose.yaml  todo.txt
.sqlx/: query-02168066f762e0e1725017f18e906c07a49bd2c56a2f891290832c03e78e552c.json  query-0342488f696d52de6a2018da774cd00433d2d71c035111bef11ec8726380b9e3.json  query-0c6286be190aab3dba8746fd37d6afb5deaee79e1f4e9fd1309e52a90944699e.json  query-0d1163e4db7b322a7dec88fab23658f27f1d8e2868aec22877ac8cf6c68a65a1.json  query-163822a00ea557224239c77e3ff38de33f885c06c30db4fbff5df5cc3f1c73f5.json  query-29f25716f63d4ab63dd960eb1249f520a5799ebb59e6b1223ffb3737984d46f4.json  query-380f5bb61740cf4e439de64bad3cf483733589fb11a51bd1e82863f7cc5674d3.json  query-3a78436e6df3afee834f2d0ec960c9ba0317d78c004e418f3ddf659fbfb4350a.json  query-3d68e239f6f4905eda60b3cb84a547b8dd8d40118105ecb34d58f205d3814b12.json  query-42d12ede12f64c1b824408dc4e47e0714e821f461f7f66e0ceb9fee62f8888ea.json  query-4525f69493e48f2f1778cdace06ccf69aa156316da995629884ab0b97c58a9e7.json  query-4c1d11e29a90bd44ce2f9cb25d36d1dbca91d4970edd4f5e563c8ac69f17cf14.json  query-51af22d431621ead42ccee698583d84d10c0be16783feeaec2c56d3c68db89c6.json  query-642c4924bcb0a7e391e90fd3894e1f45975c4dccb19dd4464ff470427bfced6b.json  query-6c3baf7bac5bf6fbb07f5897485b1d72da002a1bffdcb638af81e195b9b82412.json  query-7089e4b071022a1cbb49fd054d9225ef43b7e30655bfd74e893c07a5729a24db.json  query-7385f6db79b8c00f11c11c23eec2b071927a4582ce038b1c5862a1359bb8b8c1.json  (+29 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+76 files in other folders)
