[package]
name = "identity"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-auth = "0.8.1"
base64 = "0.22.1"
base64urlsafedata = "0.5.4"
dotenvy = "0.15.7"
http = "1"
jsonwebtoken = { version = "10.3.0", features = ["rsa", "rust_crypto"] }
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
rand = "=0.8.5"
redis = { version = "1.0.3", features = ["tokio-comp"] }
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
serde_with = "3.16.1"
snowflaked = "1.0.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
webauthn-rs = { version = "0.5.4", features = ["conditional-ui", "danger-allow-state-serialisation"] }
